--- a/templates/index.html
+++ b/templates/index.html
@@ -7,25 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Python Websockets Chat Demo</h1>
-        <p>This is a Python WebSockets Chat Demo. The code lives <a href="https://github.com/heroku-examples/">on GitHub</a>. You can find the full guide <a href="https://devcenter.heroku.com/articles/python-websockets">on Heroku DevCenter</a>.</p>
-      </div>
-      <form id="input-form" class="form-inline">
-        <div class="form-group">
-          <input id="input-handle" type="text" class="form-control" placeholder="Enter handle" autofocus />
-        </div>
-        <div class="form-group">
-          <input id="input-text" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
-        </div>
-        <button class="btn btn-primary" type="submit">Send</button>
-      </form>
-      <div class="page-header">
-        <h1>Chat</h1>
-      </div>
-      <div id="chat-text">
-      </div>
+    <div>
+        <h1>Video Streaming Demonstration</h1>
+        <img id="cam" src="static/picture_out.png" width="640" height="480" />
     </div>
 
 
