--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!-- templates/index.html -->
 <html>
   <head>
-    <title>Python Websockets Chat Demo</title>
+    <title>Video Streaming Demonstration</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="static/css/application.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,8 @@
     <div>
         <h1>Video Streaming Demonstration</h1>
         <img id="cam" src="static/picture_out.png" width="640" height="480" />
+        <img id="cam2" src="static/picture_out.png" width="640" height="480" />
+
     </div>
 
 
