--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div>
         <h1>Video Streaming Demonstration</h1>
         <img id="cam" src="static/picture_out.png" width="640" height="480" />
-        <img id="cam2" src="static/picture_out.png" width="640" height="480" />
+        <img id="cam2" src="static/picture_out_2.png" width="640" height="480" />
 
     </div>
 
